# hs-endec

./: README.md  endec.hs  hs-endec.cabal  main.hs
Endec/: Wrap.hs
src/: Endec.hs  hs-endec.hs
src/Endec/: Wrap.hs
