name:                endec
version:             0.1.0.0
synopsis:            Encryption, Decryption by DES algorithm
-- description:
homepage:            github.com/pneu/hs-endec
license:             MIT
license-file:        LICENSE
author:              pneu
maintainer:          pneumaster@gmail.com
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8

executable hs-endec
  main-is:            hs-endec.hs
  hs-source-dirs:     src/
  ghc-options:        -Wall -O2
  -- other-modules:
  build-depends:      base ==4.5.*, bytestring ==0.9.*, securemem ==0.1.*, cryptocipher ==0.6.*, crypto-cipher-types ==0.0.*
